--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "generate:api": "openapi-generator-cli generate -i ./openapi/openapi.yaml -g typescript-angular -o src/app/api/v1 --additional-properties fileNaming=kebab-case",
     "serve:ssr:skeleton-openapi": "node dist/skeleton-openapi/server/server.mjs"
   },
   "private": true,
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "^17.3.2",
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.0",
+    "@openapitools/openapi-generator-cli": "^2.13.1",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
