--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "generate:api": "openapi-generator-cli generate -i ./openapi/openapi.yaml -g typescript-angular -o src/app/api/v1 --additional-properties fileNaming=kebab-case",
+    "generate:api": "openapi-generator-cli generate -i ./openapi/openapi.yaml -g typescript-angular -o src/app/api/v1 --additional-properties fileNaming=kebab-case -t ./openapi/templates",
     "serve:ssr:skeleton-openapi": "node dist/skeleton-openapi/server/server.mjs"
   },
   "private": true,
