--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>company</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>company</name>
-	<description>OpenApo project for Spring Boot</description>
+	<description>OpenApi project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -34,9 +34,27 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.2.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openapitools</groupId>
+			<artifactId>jackson-databind-nullable</artifactId>
+			<version>0.2.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openapitools</groupId>
+			<artifactId>openapi-generator</artifactId>
+			<version>7.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -57,6 +75,37 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.openapitools</groupId>
+				<artifactId>openapi-generator-maven-plugin</artifactId>
+				<version>7.5.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/../openapi/specification.yaml</inputSpec>
+							<output>${project.basedir}</output>
+<!--							<cleanupOutput>true</cleanupOutput>-->
+							<generatorName>spring</generatorName>
+							<apiPackage>nl.skeleton.gen.api</apiPackage>
+							<modelPackage>nl.skeleton.gen.model</modelPackage>
+							<generateSupportingFiles>false</generateSupportingFiles>
+                            <templateResourcePath>${project.basedir}/../openapi/templates/</templateResourcePath>
+							<configOptions>
+                                <interfaceOnly>false</interfaceOnly>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+								<supportingFilesToGenerate>false</supportingFilesToGenerate>
+								<generateModelTests>false</generateModelTests>
+								<generateApiTests>false</generateApiTests>
+								<delegatePattern>true</delegatePattern>
+								<useSpringBoot3>true</useSpringBoot3>
+							</configOptions>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
