--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -88,7 +88,6 @@
 						<configuration>
 							<inputSpec>${project.basedir}/../openapi/specification.yaml</inputSpec>
 							<output>${project.basedir}</output>
-<!--							<cleanupOutput>true</cleanupOutput>-->
 							<generatorName>spring</generatorName>
 							<apiPackage>nl.skeleton.gen.api</apiPackage>
 							<modelPackage>nl.skeleton.gen.model</modelPackage>
@@ -100,6 +99,7 @@
 								<supportingFilesToGenerate>false</supportingFilesToGenerate>
 								<generateModelTests>false</generateModelTests>
 								<generateApiTests>false</generateApiTests>
+								<skipTests>true</skipTests>
 								<delegatePattern>true</delegatePattern>
 								<useSpringBoot3>true</useSpringBoot3>
 							</configOptions>
