--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "generate:api": "openapi-generator-cli generate -i ../openapi/specification.yaml -g typescript-angular -o src/app/api --additional-properties fileNaming=kebab-case -t ../openapi/templates/frontend",
     "test": "ng test"
   },
   "private": true,
